# duplicate-finding-tool

./: .gitignore  Duplicate finding tool tech design roadmap.md  Duplicate finding tool.md  GitHub Workflows CI for Python Project.yaml  LICENSE  README.md  Software development best practices.md  pyproject.toml  requirements.txt
.github/: .gitkeep
benchmarks/: README.md  run_benchmarks.py  run_profile.py
docs/: json-schema.md
schema/: duplicates.schema.json
src/duplicate_finder/: __init__.py  cli.py  cluster.py  core.py  index.py  minhash.py
tests/: conftest.py  test_clustering.py  test_core.py  test_minhash_prefilter.py
tests/integration/: test_cli_clusters_table.py  test_cli_errors.py  test_cli_scan.py
tests/performance/: test_large_corpus.py
tests/unit/: test_minhash_lsh.py  test_normalize_tokenize.py
