[project]
name = "duplicate-finding-tool"
version = "0.1.0"
description = "Scan directories for duplicate / near-duplicate text files using shingles + Jaccard similarity"
readme = "README.md"
authors = [ { name = "Your Name" } ]
requires-python = ">=3.9"
dependencies = [
  "click>=8.1.0",
  "tqdm>=4.66.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
duplicate-finder = "duplicate_finder.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
