[project]
name = "duplicate-finding-tool"
version = "0.2.0"
description = "Scan directories for duplicate / near-duplicate text files using shingles + Jaccard similarity, optional MinHash/LSH prefilter, clustering"
readme = "README.md"
authors = [ { name = "Your Name" } ]
requires-python = ">=3.9"
dependencies = [
  "click>=8.1.0",
  "tqdm>=4.66.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "hypothesis>=6.0.0"
]

[project.scripts]
duplicate-finder = "duplicate_finder.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
markers = [
  "slow: marks tests as slow (deselect with '-m "not slow"')",
  "property: property-based tests using Hypothesis",
]
